# encontro

./: .env  .gitignore  Cargo.toml  PROJECT_STRUCTURE.md  README.md  go.mod  go.sum  main.rs  package-lock.json  package.json
certs/: localhost+2-key.pem  localhost+2.pem
cmd/crud/: main.go
cmd/server/: main.go
cmd/server/certs/: localhost+2-key.pem  localhost+2.pem
cmd/signaling/: go.mod  main.go
crud/: .env  .gitignore  Cargo.toml  TAGS  diesel.toml
crud/migrations/2025-05-14-181554_create_messages/: up.sql
crud/src/: main.rs  models.rs  schema.rs
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  types.ts
frontend/src/components/: SelectedMenu.vue
frontend/src/helpers/: getFormatedDate.ts  getFormatedTime.ts  groupByDate.ts
frontend/src/httpClient/: httpClient.ts
frontend/src/stores/: contextMenu.ts  rtcConnections.ts  (+2 more)
integration/: crud_test.go  mocks.go
internal/usecase/: message_usecase.go  room_usecase.go  user_summary_usecase.go  user_usecase.go
mockServer/: .env  crud.js  index.js  package-lock.json  package.json  serverSchema.js
scripts/: init_db.sh  start-server.sh  test-crud.sh  test-messages.sh  test_api.sh  testdata.sql
scripts/windows/: init-server.ps1
signaling-server/: main.go
signalingServer/: main.go
src/: App.vue  global.d.ts  index.ts  router.ts  types.ts
src/components/: Home.vue  MicrophoneIcon.vue  SelectedMenu.vue  TestVideo.vue  User.vue  Videos.vue
src/stores/: connections.ts  rtcConnections.ts  wsConnection.ts
static/: index.html
(+57 files in other folders)
