[package]
name = "encontro-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9", features = ["rustls-0_21"] }
actix-files = { version = "0.6", default-features = false }
actix-web-actors = { version = "4.2", default-features = false }
actix = { version = "0.13.5", default-features = false, features = ["macros"] }

tokio = { version = "1.35", features = ["sync"] }

rustls = { version = "0.21", default-features = false }
rcgen = { version = "0.13.2", default-features = false, features = ["ring", "crypto"] }
rustls-pemfile = { version = "1.0", default-features = false }
diesel = { version = "2.2.10", features = ["r2d2", "postgres_backend", "postgres", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
